--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_svg: ^2.2.2
+  provider: ^6.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
